@@ -1,16 +1,17 @@
 ## Please update this variable if any new macros are created
-MACROS= 					\
+MACROS=						\
   aclocal-include.m4				\
-  curses.m4 					\
-  gnome-fileutils.m4 				\
+  curses.m4					\
+  gnome-fileutils.m4				\
   gnome-guile-checks.m4				\
-  gnome-libgtop-check.m4 			\
-  gnome-libgtop-sysdeps.m4 			\
+  gnome-libgtop-check.m4			\
+  gnome-libgtop-sysdeps.m4			\
   gnome-objc-checks.m4				\
-  gnome-pthread-check.m4 			\
-  gnome-support.m4 				\
-  gnome-x-checks.m4 				\
-  gnome.m4
+  gnome-pthread-check.m4			\
+  gnome-support.m4				\
+  gnome-x-checks.m4				\
+  gnome.m4					\
+  need-declaration.m4
 
 EXTRA_DIST=$(MACROS) autogen.sh macros.dep
 MAINTAINERCLEANFILES=macros.dep
